==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

- Fixed an issue that caused ``MissingPrivilegeException`` for non-superusers
  for queries with ``UNION ALL``.

- Fixed a regression that caused assignments of arrays including parameter
  placeholders to not work correctly.

- Fixed a regression which caused ``IS NOT NULL`` predicates on columns of type
  ``array(object)`` to not match correctly.

- Fixed an issue that caused the ``percentile`` aggregation to fail if an array
  containing a single item was passed as ``fractions``.

- Fixed an issue which resulted in an exception when a routing column was
  compared against a sub-query inside a ``WHERE`` clause.

- Fixed a performance regression resulting in a table scan instead of a NO-MATCH
  if a sub-query used inside a ``WHERE`` clause returns no result
  (https://github.com/crate/crate/issues/6773).