@@ -28,8 +28,8 @@ import io.crate.action.sql.SessionContext;
 import io.crate.analyze.PartitionedTableParameterInfo;
 import io.crate.analyze.TableParameterInfo;
 import io.crate.analyze.WhereClause;
-import io.crate.expression.symbol.DynamicReference;
 import io.crate.exceptions.ColumnUnknownException;
+import io.crate.expression.symbol.DynamicReference;
 import io.crate.metadata.ColumnIdent;
 import io.crate.metadata.GeneratedReference;
 import io.crate.metadata.IndexReference;
@@ -292,6 +292,10 @@ public class DocTableInfo implements TableInfo, ShardedTable, StoredTable {
 
     public String[] concreteIndices() {
         return concreteIndices;
+    }
+
+    public String[] concreteOpenIndices() {
+        return concreteOpenIndices;
     }
 
     /**
